Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69199

QMenu item - Stylesheet causes weird icon border

    XMLWordPrintable

Details

    • 678b0cf6c3753ac72ca5c538cf24d70ff61c725d

    Description

      Windows and Mac do not raise a menu action icon when the item is the active one. Unfortunately Qt does when a style-sheet is set and it is not easy to work-around.
      The missing background highlight and the changed text color may be issues, but not a part of this reported issue. To my knowledge they can be (easily) controlled with style sheets.

      To reproduce comment in the line
      // app.setStyleSheet(styleSheet);

      Attachments

        1. image-2018-06-29-08-43-45-374.png
          image-2018-06-29-08-43-45-374.png
          32 kB
        2. main.cpp
          0.6 kB
        3. main.pro
          0.0 kB
        4. Screenshot_2.png
          Screenshot_2.png
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tmartsum Thorbjørn Lund Martsum
            tmartsum Thorbjørn Lund Martsum
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes